--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack --watch"
+    "build": "webpack --watch",
+    "lite-server": "lite-server --baseDir=dist"
   },
   "keywords": [],
   "author": "",
