--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack --watch",
+    "webpack": "webpack --watch",
+    "webpack-production": "webpack",
     "lite-server": "lite-server --baseDir=dist"
   },
   "keywords": [],
@@ -13,7 +14,9 @@
     "copy-webpack-plugin": "^4.4.2",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "inline-svg-loader": "0.0.1",
     "node-sass": "^4.7.2",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "svg-url-loader": "^2.3.0",
