--- a/package.json
+++ b/package.json
@@ -25,5 +25,7 @@
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "typescript": "^5.6.3"
+  }
 }
